--- a/src/pages/About me/style.css
+++ b/src/pages/About me/style.css
@@ -19,11 +19,11 @@
 }
 
 .about-text h1 {
-  margin: 1rem 3rem 0 3rem;
+  margin: 1rem 2rem 0 2rem;
 }
 
 .about-text-info {
-  padding: 1rem 3rem 0 3rem;
+  padding: 1rem 2rem 0 2rem;
 }
 
 .who {
@@ -36,9 +36,14 @@
 }
 
 .icon {
-  padding: 2.6rem 3.5rem 0 3.5rem;
+  padding: 2.6rem 3rem 0 3rem;
   gap: 25px;
   color: #ff6f01;
+}
+
+.icon-wrap{
+  display: flex;
+  gap: 25px;
 }
 
 @media (min-width:600px ) and (max-width:920px){
@@ -98,10 +103,20 @@
   }
 
   .icon {
-    padding: 1rem 3.5rem 1rem 3.5rem;
+    padding: 1rem 2rem;
+    flex-direction: column;
   }
+
+  .icon-wrap{
+padding-left:1rem ;
+  }
+
   .icon-link svg{
     width: 20px !important;
     height: 20px !important;
+  }
+
+  .statistik img{
+    width: 12rem;
   }
 }
