--- a/src/pages/About me/style.css
+++ b/src/pages/About me/style.css
@@ -91,11 +91,14 @@
   }
 
   .icon {
-    padding: 1rem 3.5rem 1rem 3.5rem;
+    padding: 1rem 2.5rem;
   }
   .icon-link svg{
     width: 20px !important;
     height: 20px !important;
+  }
+  .button-cv{
+    margin: 0 2.5rem;
   }
 }
 
